@@ -12,7 +12,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 /**
  * Service class for managing projects.
@@ -107,7 +106,7 @@ public class ProjectService {
         logger.info("Retrieving all projects");
         return projectRepository.findAll().stream()
                 .map(projectMapper::toProjectDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
